fixtures/valid/type-only-import/src/consumer/public.ts
import type { PublicThing } from "../types/public";
export const consumerValue: PublicThing = { value: "ok" };
