fixtures/invalid/private-cross-cell-js-extension/src/orders/public.ts
import { privateInvoice } from "../billing/internal/invoice.js";

export const ordersPublic = privateInvoice;
